updating portfolio site

--- a/index.html
+++ b/index.html
@@ -3,15 +3,320 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Project</title>
-	<link rel="stylesheet" href="public/styles/style.css">
+	<link href="https://fonts.googleapis.com/
+	css?family=Montserrat|Open+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/public/styles/style.css">
 </head>
 <body>
 
-	<div>
-		<h1>Robin Watson</h1>
-	</div>
+	<div class="globalWrapper">
+	<!-- globalWrapper -->
+		<header>
+			<div class="inner-wrapper">
+				<div class='headerBox'>
+					<h1>Hey! I'm Robin Watson</h1>
+					<h2>Front-End Web developer</h2>
+				</div>
+			</div>
+			<!-- inner-wrapper -->
+		</header>
 
-	<script src="public/scripts/main.js"></script>
-	
+		<section class="navBar">
+			<div class="inner-wrapper">
+				<ul class="menu ">
+					<li>about</li>
+					<li>portfolio</li>
+					<li>contact</li>
+				</ul>
+			</div>
+		<!-- inner-wrapper -->
+		</section>
+
+		<section class="aboutMeTitle">
+			<div class="inner-wrapper">
+				<div class='sectionHeading'>
+					<h4 class='secondSectionHeadingFont''>about me</h4>
+					<h2 class='sectionHeadingFont'>Who am I?</h2>
+				</div>
+			</div>
+			<!-- inner-wrapper -->
+		</section>
+
+		<section class="aboutMeBlurb">
+			<div class="inner-wrapper">
+				<div class="blurbContainer">
+					<div class='profileImgItem'>
+						<img src="dev/assets/rsz_robinClose.jpg" alt="Picture of Robin Watson smiling and leaning against white wall">
+					</div>
+					<div class="blurbItemTwo">
+						<h2 class='sectionHeadingFont'>Robin Watson</h2>
+						<h4 class='secondSectionHeadingFont'>Front-End Web Developer</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto dignissimos nemo eum culpa nulla omnis necessitatibus consectetur similique adipisci ea!
+						</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi perferendis saepe nobis fugit sequi quis quidem, laboriosam cum omnis enim.
+						</p>
+						<button>Download Resume</button>
+					</div>
+					<!-- blurbItemTwo -->
+				</div>
+				<!-- blurb-container -->
+			</div>
+			<!-- inner-wrapper -->
+		</section>
+
+		<section class="skills">
+			<div class="inner-wrapper">
+				<div class='sectionHeading'>
+					<h4>skills</h4>
+					<h2>why choose me</h2>
+				</div>
+
+					<div class="iconItemOne">
+
+						<div class='toolsItem1 box'>
+							<i class="devicon-bootstrap-plain"></i>
+							<h3>bootstrap</h3>
+						</div>
+
+						<div class='toolsItem2 box'>
+							<i class="devicon-css3-plain"></i>
+							<h3>css 3</h3>
+						</div>
+
+						<div class='toolsItem3 box'>
+							<i class="devicon-git-plain"></i>
+							<h3>git</h3>
+						</div>
+
+						<div class='toolsItem4 box'>
+							<i class="devicon-github-plain"></i>
+							<h3>github</h3>
+						</div>
+
+						<div class='toolsItem5 box'>
+							<i class="devicon-gulp-plain"></i>
+							<h3>gulp</h3>
+						</div>
+
+						<div class='toolsItem6 box'>
+							<i class="devicon-html5-plain"></i>
+							<h3>html 5</h3>
+						</div>
+
+					</div>
+					<!-- iconsItemOne -->
+
+					<div class="iconItemTwo">
+
+						<div class='toolsItem7 box'>
+							<i class="devicon-javascript-plain"></i>
+							<h3>javascript</h3>
+						</div>
+
+						<div class='toolsItem8 box'>
+							<i class="devicon-jquery-plain"></i>
+							<h3>jquery</h3>
+						</div>
+
+						<div class='toolsItem9 box'>
+							<i class="devicon-sass-original"></i>
+							<h3>sass</h3>
+						</div>
+
+						<div class='toolsItem10 box'>
+							<i class="devicon-react-original"></i>
+							<h3>react</h3>
+						</div>
+
+						<div class='toolsItem11 box'>
+							<i class="devicon-babel-plain"></i>
+							<h3>babel</h3>
+						</div>
+
+						<div class='toolsItem12 box'>
+							<img src="dev/assets/firebase-black.png"></i>
+							<h3>firebase</h3>
+						</div>
+					
+					</div>
+					<!-- iconItemTwo -->
+			</div>
+			<!-- innner-wrapper -->
+		</section>
+
+		<section class='portfolioGallery'>
+		<div class="inner-wrapper">
+			<div class='sectionHeading'>
+				<h4>portfolio</h4>
+				<h2>Check out my work</h2>
+			</div>
+
+			<div class="portfolioContainer">
+
+				<div class='proj1Box'>
+					<div class="portImageOne portBox">
+						<a href="#">
+							<img src="/dev/assets/proj2screen.png" alt="">
+						</a>
+					</div>
+
+					<div class="portInfoOne portBox">
+						<h3>HTML5 - CSS3 - SASS - Responsive design</h3>
+					</div>
+				</div>
+				<!-- proj1Box -->
+
+				<div class='proj2Box'>
+					<div class="portInfoTwo portBox">
+						<h3>HTML5 - CSS3 - Jquery - Responsive design </h3>
+					</div>
+
+					<div class="portImageTwo portBox">
+						<a href="#">
+							<img src="/dev/assets/proj3screen.png" alt="">
+						</a>
+					</div>
+				</div>
+				<!-- proj2Box -->
+
+				<div class='proj3Box'>
+					<div class="portImageThree portBox">
+						<a href="#">
+							<img src="/dev/assets/proj6screen.png" alt="">
+						</a>
+					</div>
+
+					<div class="portInfoThree portBox">
+						<h3> SASS - REACT - Responsive design - BABEL - Firebase </h3>
+					</div>
+				</div>
+				<!-- proj3Box -->
+
+				<div class='proj4Box'>
+
+					<div class="portInfoFour portBox">
+						<h3>HTML5 - CSS3 - SASS - Jquery - Responsive design - firebase - api </h3>
+					</div>
+
+					<div class="portImageFour portBox">
+						<a href="#">
+							<img src="/dev/assets/proj5screen.png" alt="">
+						</a>
+					</div>
+
+				</div>
+				<!-- prob4Box -->
+			</div>
+			<!-- portfolioContainer -->
+		</div>
+		<!-- inner-wrapper -->
+		</section>
+
+		<section class="contact">
+			<div class="inner-wrapper">
+				<div class='sectionHeading'>
+					<h4>contact</h4>
+					<h2>get in touch with me</h2>
+				</div>
+				<div class="contactIconWrapper">
+					<div class="contactItems">
+						<i class="fa fa-home" aria-hidden="true"></i>
+						<hr class="miniYellowLine"></hr>
+						<a href="https://www.google.ca/maps/@43.6815359,-79.3713946,12z">
+							<p>Toronto, Canada</p>
+						</a>
+					</div>
+
+					<div class="contactItems">
+						<i class="fa fa-phone-square" aria-hidden="true"></i>
+						<hr class="miniYellowLine"></hr>
+						<a href="tel:647-618-5625">
+							<p>647.618.5625</p>
+						</a>
+					</div>
+
+					<div class="contactItems">
+						<i class="fa fa-paper-plane" aria-hidden="true"></i>
+						<hr class="miniYellowLine"></hr>
+						<a href="mailto:drumsrobin@gmail.com">
+							<p>drumsrobin@gmail.com</p>
+						</a>
+					</div>
+
+				</div>
+				<!-- contactIconWrapper -->
+				<div class="contactFormWrapper">
+
+				<form action="">
+
+					<div class="inputBox">
+
+						<div class="contactFormItem">
+							<label for="">Name</label>
+							<input type="text" placeholder="What's your full name?">
+						</div>
+
+						<div class="contactFormItem">
+							<label for="">Email</label>
+							<input type="email" placeholder="What's your email?">
+						</div>
+
+						<div class="contactFormItem">
+							<label for="">Subject</label>
+							<input type="text" placeholder="What are you thinking?">
+						</div>
+
+					</div>
+				<!-- inputBox -->
+
+					<div class="inputBoxTwo">
+
+						<div class="contactFormItem">
+							<textarea>Leave me a message!</textarea>
+						</div>
+
+					</div>
+					<!-- inputBoxTwo -->
+					</div>
+				<!-- contactFormWrapper -->
+
+					<div class="sendEmailButton">
+						<button>Send Message</button>
+					</div>
+				</form>
+				
+			</div>
+			<!-- inner-wrapper -->
+		</section>
+
+		<section class="map">
+			<div class="globalWrapper">
+				<a href="https://www.google.ca/maps/place/Toronto,+Ontario/@43.7184034,-79.5184864,11z/data=!3m1!4b1!4m5!3m4!1s0x89d4cb90d7c63ba5:0x323555502ab4c477!8m2!3d43.653226!4d-79.3831843">
+					<div class="backgroundMapImage"></div>
+				</a>
+			</div>
+		</section>
+
+		<section class="footer">
+			<footer>
+				<h3>site built by Robin Watson</h3>
+				<p>site designed by Mohsin</p>
+				<div class="socialLinksContainer">
+					<ul>
+						<li><i class="devicon-github-plain"></i></li>
+						<li><img src="dev/assets/medium.png" alt=""></li>
+						<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+					</ul>
+				</div>
+			</footer>
+		</section>
+
+		
+
+		<script src="public/scripts/main.js"></script>
+	</div>
+	<!-- globalWrapper -->
 </body>
 </html>
