finished basic layout

--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
 
 		<section class="footer">
 			<footer>
-				<h3>site built by Robin Watson</h3>
-				<p>site designed by Mohsin</p>
+				<h3>Site by Robin Watson</h3>
+				<p>Design by Mohsin</p>
 				<div class="socialLinksContainer">
 					<ul>
 						<li><i class="devicon-github-plain"></i></li>
-						<li><img src="dev/assets/medium.png" alt=""></li>
+						<!-- <li><img src="dev/assets/medium.png" alt=""></li> -->
 						<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 					</ul>
 				</div>
