--- a/index.html
+++ b/index.html
@@ -301,13 +301,20 @@
 
 		<section class="footer">
 			<footer>
-				<h3>Site by Robin Watson</h3>
+				<a href="#">
+					<h3>Site by Robin Watson</h3>
+				</a>
 				<p>Design by Mohsin</p>
 				<div class="socialLinksContainer">
 					<ul>
-						<li><i class="devicon-github-plain"></i></li>
-						<!-- <li><img src="dev/assets/medium.png" alt=""></li> -->
-						<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+						<a href="https://github.com/Robinhoeh">
+							<li><i class="devicon-github-plain"></i></li>
+						</a>
+
+						<a href="https://twitter.com/rdubcodes">
+							<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+						</a>
+
 					</ul>
 				</div>
 			</footer>
