--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<section class="navBar">
 			<div class="inner-wrapper">
-				<ul class="menu ">
+				<ul class="menu">
 					<li>about</li>
 					<li>portfolio</li>
 					<li>contact</li>
@@ -163,14 +163,28 @@
 					</div>
 
 					<div class="portInfoOne portBox">
-						<h3>HTML5 - CSS3 - SASS - Responsive design</h3>
+						<h2>1. PSD Conversion</h2>
+							<div class="techUsed">
+								<p>HTML5</p>
+								<p>CSS3</p>
+								<p>SASS</p>
+								<p>Responsive design</p>
+							</div>
+						<p>A fully responsive site using flex-box</p>
 					</div>
 				</div>
 				<!-- proj1Box -->
 
 				<div class='proj2Box'>
 					<div class="portInfoTwo portBox">
-						<h3>HTML5 - CSS3 - Jquery - Responsive design </h3>
+					<h2>2. Jquery interactive</h2>
+						<div class="techUsed">
+							<p>HTML5</p>
+							<p>CSS3</p>
+							<p>Jquery</p>
+							<p>Responsive design</p>
+						</div>
+					<p>An interactive site that randomly generates an answer by collecting user input and dynamically displaying it to the DOM.</p>
 					</div>
 
 					<div class="portImageTwo portBox">
@@ -189,7 +203,16 @@
 					</div>
 
 					<div class="portInfoThree portBox">
-						<h3> SASS - REACT - Responsive design - BABEL - Firebase </h3>
+					<h2>3. React/Firebase</h2>
+						<div class="techUsed">
+							<p>React</p>
+							<p>Sass</p>
+							<p>Babel</p>
+							<p>Responsive design</p>
+							<p>Firebase</p>
+						</div>
+					<p>This application allows someone hosting a party to share an up to date list with all of their guests using firebase to store the data and React to display and update the data in real time, no refreshing necessary.
+					</p>
 					</div>
 				</div>
 				<!-- proj3Box -->
@@ -197,7 +220,17 @@
 				<div class='proj4Box'>
 
 					<div class="portInfoFour portBox">
-						<h3>HTML5 - CSS3 - SASS - Jquery - Responsive design - firebase - api </h3>
+					<h2>3. API/Firebase</h2>
+						<div class="techUsed">
+							<p>Sass</p>
+							<p>Babel</p>
+							<p>Responsive design</p>
+							<p>Firebase</p>
+							<p>jquery</p>
+						</div>
+					<p>This application allows the user to select a "look" based on their personal preference or popularity of a "look". They are then able to choose which makeup they would like based on price, brand or category. 
+					</p>
+						
 					</div>
 
 					<div class="portImageFour portBox">
@@ -321,9 +354,8 @@
 			</footer>
 		</section>
 
-		
-
 		<script src="public/scripts/main.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	</div>
 	<!-- globalWrapper -->
 </body>
