responsive header done

--- a/index.html
+++ b/index.html
@@ -34,18 +34,13 @@
 		<!-- inner-wrapper -->
 		</section>
 
-		<section class="aboutMeTitle">
-			<div class="inner-wrapper">
-				<div class='sectionHeading'>
-					<h4 class='secondSectionHeadingFont''>about me</h4>
-					<h2 class='sectionHeadingFont'>Who am I?</h2>
-				</div>
-			</div>
-			<!-- inner-wrapper -->
-		</section>
-
 		<section class="aboutMeBlurb">
 			<div class="inner-wrapper">
+				<div class='sectionHeading'>
+					<h4 class='secondSectionHeadingFont'>about me</h4>
+					<h2 class='sectionHeadingFont'>Who am I?</h2>
+				</div>
+
 				<div class="blurbContainer">
 					<div class='profileImgItem'>
 						<img src="dev/assets/rsz_robinClose.jpg" alt="Picture of Robin Watson smiling and leaning against white wall">
@@ -353,9 +348,9 @@
 				</div>
 			</footer>
 		</section>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="public/scripts/main.js"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
 	</div>
 	<!-- globalWrapper -->
 </body>
