respinsive portolio done

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
 			<div class="portfolioContainer">
 
 				<div class='proj1Box'>
-					<div class="portImageOne portBox">
+					<div class="portImageOne portBox order1">
 						<a href="#">
 							<img src="/dev/assets/proj2screen.png" alt="">
 						</a>
 					</div>
 
-					<div class="portInfoOne portBox">
+					<div class="portInfoOne portBox order2">
 						<h2>1. PSD Conversion</h2>
 							<div class="techUsed">
 								<p>HTML5</p>
@@ -171,7 +171,7 @@
 				<!-- proj1Box -->
 
 				<div class='proj2Box'>
-					<div class="portInfoTwo portBox">
+					<div class="portInfoTwo portBox order3">
 					<h2>2. Jquery interactive</h2>
 						<div class="techUsed">
 							<p>HTML5</p>
@@ -182,7 +182,7 @@
 					<p>An interactive site that randomly generates an answer by collecting user input and dynamically displaying it to the DOM.</p>
 					</div>
 
-					<div class="portImageTwo portBox">
+					<div class="portImageTwo portBox order4">
 						<a href="#">
 							<img src="/dev/assets/proj3screen.png" alt="">
 						</a>
@@ -191,13 +191,13 @@
 				<!-- proj2Box -->
 
 				<div class='proj3Box'>
-					<div class="portImageThree portBox">
+					<div class="portImageThree portBox order5">
 						<a href="#">
 							<img src="/dev/assets/proj6screen.png" alt="">
 						</a>
 					</div>
 
-					<div class="portInfoThree portBox">
+					<div class="portInfoThree portBox order6">
 					<h2>3. React/Firebase</h2>
 						<div class="techUsed">
 							<p>React</p>
@@ -214,8 +214,8 @@
 
 				<div class='proj4Box'>
 
-					<div class="portInfoFour portBox">
-					<h2>3. API/Firebase</h2>
+					<div class="portInfoFour portBox order7">
+					<h2>4. API/Firebase</h2>
 						<div class="techUsed">
 							<p>Sass</p>
 							<p>Babel</p>
@@ -228,7 +228,7 @@
 						
 					</div>
 
-					<div class="portImageFour portBox">
+					<div class="portImageFour portBox order8">
 						<a href="#">
 							<img src="/dev/assets/proj5screen.png" alt="">
 						</a>
