--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Project</title>
-	<link href="https://fonts.googleapis.com/
-	css?family=Montserrat|Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/public/styles/style.css">
@@ -16,7 +16,7 @@
 		<header>
 			<div class="inner-wrapper">
 				<div class='headerBox'>
-					<h1>Hey! I'm Robin Watson</h1>
+					<h1>Robin Watson</h1>
 					<h2>Front-End Web developer</h2>
 				</div>
 			</div>
