updated port layout and responsive issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</section>
 
 		<section class="aboutMeBlurb">
-			<div class="inner-wrapper">
+			<div class="about-me-wrapper">
 				<div class='sectionHeading'>
 					<h4 class='secondSectionHeadingFont'>about me</h4>
 					<h2 class='sectionHeadingFont'>Who am I?</h2>
@@ -48,9 +48,9 @@
 					<div class="blurbItemTwo">
 						<h2 class='sectionHeadingFont'>Robin Watson</h2>
 						<h4 class='secondSectionHeadingFont'>Front-End Web Developer</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto dignissimos nemo eum culpa nulla omnis necessitatibus consectetur similique adipisci ea!
+						<p>Hey! I ‘m Robin, a Front-End Web Developer based in Toronto. Prior to working in technology I was a musician, which gave me the opportunity to travel the world and made me really good at dealing with conflicts and stressful situations. I enjoy working on a team and collaborating with others to produce functional and accessible projects.
 						</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi perferendis saepe nobis fugit sequi quis quidem, laboriosam cum omnis enim.
+						<p>When I am not coding, you will find me playing and teaching the drums, trying to score goals in NHL on Playstation and attempting to finish the series Zoo on Netflix. I am really excited to learn about creating a database for a project Idea and furthering my javascript skills. 
 						</p>
 						<button>Download Resume</button>
 					</div>
@@ -165,6 +165,7 @@
 								<p>SASS</p>
 								<p>Responsive design</p>
 							</div>
+							<button>View psd</button>
 						<p>A fully responsive site using flex-box</p>
 					</div>
 				</div>
