added padding to inner wrapper

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 						</p>
 						<p>When I am not coding, you will find me playing and teaching the drums, trying to score goals in NHL on Playstation and attempting to finish the series Zoo on Netflix. I am really excited to learn about creating a database for a project Idea and furthering my javascript skills. 
 						</p>
-						<button>Download Resume</button>
+						<div class="bioButton">
+							<button>Download Resume</button>
+						</div>
 					</div>
 					<!-- blurbItemTwo -->
 				</div>
