changed filepath for images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				<div class="blurbContainer">
 					<div class='profileImgItem'>
-						<img src="dev/assets/rsz_robinClose.jpg" alt="Picture of Robin Watson smiling and leaning against white wall">
+						<img src="public/assets/rsz_robinclose.jpg" alt="Picture of Robin Watson smiling and leaning against white wall">
 					</div>
 					<div class="blurbItemTwo">
 						<h2 class='sectionHeadingFont'>Robin Watson</h2>
@@ -133,7 +133,7 @@
 						</div>
 
 						<div class='toolsItem12 box'>
-							<img src="dev/assets/firebase-black.png"></i>
+							<img src="public/assets/firebase-black.png"></i>
 							<h3>firebase</h3>
 						</div>
 					
@@ -155,7 +155,7 @@
 				<div class='proj1Box'>
 					<div class="portImageOne portBox order1">
 						<a href="#">
-							<img src="/dev/assets/proj2screen.png" alt="">
+							<img src="public/assets/proj2screen.png" alt="">
 						</a>
 					</div>
 
@@ -187,7 +187,7 @@
 
 					<div class="portImageTwo portBox order4">
 						<a href="#">
-							<img src="/dev/assets/proj3screen.png" alt="">
+							<img src="public/assets/proj3screen.png" alt="">
 						</a>
 					</div>
 				</div>
@@ -196,7 +196,7 @@
 				<div class='proj3Box'>
 					<div class="portImageThree portBox order5">
 						<a href="#">
-							<img src="/dev/assets/proj6screen.png" alt="">
+							<img src="public/assets/proj6screen.png" alt="">
 						</a>
 					</div>
 
@@ -233,7 +233,7 @@
 
 					<div class="portImageFour portBox order8">
 						<a href="#">
-							<img src="/dev/assets/proj5screen.png" alt="">
+							<img src="public/assets/proj5screen.png" alt="">
 						</a>
 					</div>
 
@@ -351,7 +351,7 @@
 				</div>
 			</footer>
 		</section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="public/scripts/main.js"></script>
 
 	</div>
