--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 								<p>SASS</p>
 								<p>Responsive design</p>
 							</div>
-							<button>View psd</button>
+							<a href="public/assets/project2.jpg" target="_blank">
+								<button>View psd</button>
+							</a>
 						<p>A fully responsive site using flex-box</p>
 					</div>
 				</div>
@@ -182,12 +184,15 @@
 							<p>Jquery</p>
 							<p>Responsive design</p>
 						</div>
+						<a href="https://github.com/Robinhoeh/Proj3FirstJquerySite" target="_blank">
+							<button>View Github</button>
+						</a>
 					<p>An interactive site that randomly generates an answer by collecting user input and dynamically displaying it to the DOM.</p>
 					</div>
 
 					<div class="portImageTwo portBox order4">
 						<a href="#">
-							<img src="public/assets/proj3screen.png" alt="">
+							<img src="public/assets/proj3screen.png" target="_blank">
 						</a>
 					</div>
 				</div>
@@ -209,6 +214,9 @@
 							<p>Responsive design</p>
 							<p>Firebase</p>
 						</div>
+						<a href="https://github.com/Robinhoeh/Mefood.Youdrink" target="_blank">
+							<button>View Github</button>
+						</a>
 					<p>This application allows someone hosting a party to share an up to date list with all of their guests using firebase to store the data and React to display and update the data in real time, no refreshing necessary.
 					</p>
 					</div>
@@ -226,6 +234,9 @@
 							<p>Firebase</p>
 							<p>jquery</p>
 						</div>
+						<a href="https://github.com/Robinhoeh/makeup-app" target="_blank">
+							<button>View Github</button>
+						</a>
 					<p>This application allows the user to select a "look" based on their personal preference or popularity of a "look". They are then able to choose which makeup they would like based on price, brand or category. 
 					</p>
 						
