updated stuff and made favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Robin Watson - Front End Developer</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="public/assets/favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -167,9 +168,15 @@
 								<p>SASS</p>
 								<p>Responsive design</p>
 							</div>
-							<a href="public/assets/project2.jpg" target="_blank">
-								<button>View psd</button>
-							</a>
+
+							<div class="buttonWrapper">
+								<a href="public/assets/project2.jpg" target="_blank">
+									<button>View psd</button>
+								</a>
+								<a href="/mojo-psd" target="_blank">
+									<button>Live Site</button>
+								</a>
+							</div>
 						<p>A fully responsive site using flex-box</p>
 					</div>
 				</div>
@@ -186,6 +193,9 @@
 						</div>
 						<a href="https://github.com/Robinhoeh/Proj3FirstJquerySite" target="_blank">
 							<button>View Github</button>
+						</a>
+						<a href="/prophesize-me" target="_blank">
+								<button>Live Site</button>
 						</a>
 					<p>An interactive site that randomly generates an answer by collecting user input and dynamically displaying it to the DOM.</p>
 					</div>
@@ -217,6 +227,9 @@
 						<a href="https://github.com/Robinhoeh/Mefood.Youdrink" target="_blank">
 							<button>View Github</button>
 						</a>
+						<a href="https://react-me-food-you-drinks.firebaseapp.com/" target="_blank">
+							<button>Live Site</button>
+						</a>
 					<p>This application allows someone hosting a party to share an up to date list with all of their guests using firebase to store the data and React to display and update the data in real time, no refreshing necessary.
 					</p>
 					</div>
@@ -236,6 +249,9 @@
 						</div>
 						<a href="https://github.com/Robinhoeh/makeup-app" target="_blank">
 							<button>View Github</button>
+						</a>
+						<a href="https://makeupteam.github.io/makeup-app/" target="_blank">
+							<button>Live Site</button>
 						</a>
 					<p>This application allows the user to select a "look" based on their personal preference or popularity of a "look". They are then able to choose which makeup they would like based on price, brand or category. 
 					</p>
@@ -274,9 +290,7 @@
 					<div class="contactItems">
 						<i class="fa fa-phone-square" aria-hidden="true"></i>
 						<hr class="miniYellowLine"></hr>
-						<a href="tel:647-618-5625">
-							<p>647.618.5625</p>
-						</a>
+						<a href="tel:647-618-5625"><p>647-618-5625</p></a>
 					</div>
 
 					<div class="contactItems">
@@ -331,14 +345,6 @@
 				<!-- /form -->
 			</div>
 			<!-- inner-wrapper -->
-		</section>
-
-		<section class="map">
-			<div class="globalWrapper">
-				<a href="https://www.google.ca/maps/place/Toronto,+Ontario/@43.7184034,-79.5184864,11z/data=!3m1!4b1!4m5!3m4!1s0x89d4cb90d7c63ba5:0x323555502ab4c477!8m2!3d43.653226!4d-79.3831843" target="_blank">
-					<div class="backgroundMapImage"></div>
-				</a>
-			</div>
 		</section>
 
 		<section class="footer">
