--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 
 		<section class="navBar">
 			<div class="inner-wrapper">
-				<ul class="menu">
-					<a href="#about"><li>about</li></a>
-					<a href="#portfolio"><li>portfolio</li></a>
-					<a href="#contact"><li>contact</li></a>
-				</ul>
+				<div class="menuBox">
+				<p class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></p>
+					<ul class="menu">
+						<a href="#about"><li>about</li></a>
+						<a href="#portfolio"><li>portfolio</li></a>
+						<a href="#contact"><li>contact</li></a>
+					</ul>
+				</div>
 			</div>
 		<!-- inner-wrapper -->
 		</section>
@@ -355,42 +358,24 @@
 				<p>2017</p>
 
 				<div class="socialLinksContainer">
-					<!-- <ul>
-						<a href="https://github.com/Robinhoeh" target="_blank">
-							<li><i class="devicon-github-plain"></i></li>
-						</a>
-						<a href="https://twitter.com/rdubcodes" target="_blank">
-							<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
-						</a>
-						<a href="https://www.linkedin.com/in/robin-watson-074aa345/" target="_blank">
-						<li>
-							<i class="fa fa-linkedin-square" aria-hidden="true"></i>
-						</a>
-						</li>
-						<li>
-						<a href="https://medium.com/@drumsrobin" target="_blank">
-							<i class="fa fa-medium" aria-hidden="true"></i>
-							</li>
-						</a>
-					</ul> -->
 					<ul class="links">
 						<li class="icon-cell">
-							<a href="#">
+							<a href="https://github.com/Robinhoeh">
 								<i class="devicon-github-plain"></i>
 							</a>
 						</li>
 						<li class="icon-cell">
-							<a href="#">
+							<a href="https://twitter.com/rdubcodes">
 								<i class="fa fa-twitter-square" aria-hidden="true"></i>
 							</a>
 						</li>
 						<li class="icon-cell">
-							<a href="#">
+							<a href="https://www.linkedin.com/in/robin-watson-074aa345/">
 								<i class="fa fa-linkedin-square" aria-hidden="true"></i>
 							</a>
 						</li>
 						<li class="icon-cell">
-							<a href="#">
+							<a href="https://medium.com/@drumsrobin">
 								<i class="fa fa-medium" aria-hidden="true"></i>
 							</a>
 						</li>
@@ -409,7 +394,12 @@ $(function() {
 		offset: 0,
 		speed: 900,
 		easing: 'swing'
-	});			
+		});
+	$('.hamburger').click(function(){	//select hamburger class on click
+		$('.menuBox').toggleClass('overlay');	// select menu toggle jquery using overlay class
+		$('.menuBox ul').toggleClass('show');	//on menu ul use jQuery toggleCLass show
+	
+	});
 });
 
 	</script>
